# hermeneus

./: .gitignore  ChangeLog.md  README.md  hermeneus.cabal  package.yaml  stack.yaml
src/I18n/: Hermeneus.hs
src/I18n/Hermeneus/: Aeson.hs  Database.hs  Engine.hs  Message.hs  NumberHandling.hs  Prim.hs  Word.hs
test/: DocTests.hs  Shopping.hs  Spec.hs
test-resource/Example/Diary/: en.yaml  grc.yaml  ja.yaml
test-resource/Example/Shopping/: en.yaml  ja.yaml
test-resource/Shopping/: ja.yaml
test/Example/: Diary.hs  Shopping.hs
test/I18n/Hermeneus/: AbaList.hs  AesonSpec.hs  ArbitraryInstances.hs  EngineSpec.hs  MessageSpec.hs  NumberHandlingSpec.hs  WordSpec.hs
